# Newton-fractal-generator

./: README  makefile
src/: CMakeLists.txt  constants.h  main.cpp  vectorized_functions.ispc
